# django-admin

./: .env.development  .gitignore  pyproject.toml
backend/: settings.py  urls.py
config/: apps.py  exceptions.py  paginations.py  renderers.py
dictionary/: admin.py  models.py  serializers.py  urls.py  views.py
dictionary/migrations/: 0001_initial.py  0002_alter_dictionary_options_and_more.py  0003_alter_dictionaryitem_dictionary.py  0004_sysconfig.py  0005_alter_sysconfig_value.py
menu/: admin.py  models.py  serializers.py  urls.py  views.py
menu/migrations/: 0001_initial.py  0002_alter_menumeta_full_path_key_and_more.py  0003_alter_menu_options_alter_menumeta_options_and_more.py  0004_menu_type.py  0005_alter_menumeta_menu.py  0006_menu_status_alter_menu_parent_alter_menu_type.py  0007_alter_menu_component_alter_menu_type.py  0008_alter_menu_path.py
storage/: apps.py  models.py  serializers.py  urls.py  views.py
storage/migrations/: 0001_initial.py
user/: filters.py  models.py  serializers.py  urls.py  views.py
user/migrations/: 0001_initial.py  0002_alter_userdetail_user.py  0003_alter_userdetail_options_role.py
